--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "element-plus": "^2.7.6",
+    "ethers": "^6.13.1",
     "pinia": "^2.1.7",
     "sass": "^1.77.6",
     "vue": "^3.4.29",
